--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -15,6 +15,7 @@ main {
         }
         ul {
             list-style: none;
+            padding-left: 0px;
             li {
                 font-size: 18px;
                 padding-top: 10px;
