--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -30,8 +30,12 @@ main {
         padding: 10px 20px;
         margin-top: 50px;
     }
-    .card-group {
+    .c-group {
         height: 100px;
-        width: 500px;
+        width: 100%;
+    }
+    .c-show {
+        height: 200px;
+        width: 400px;
     }
 }
